update front and comment code

--- a/AppProject/app/src/main/res/layout/item_number.xml
+++ b/AppProject/app/src/main/res/layout/item_number.xml
@@ -3,17 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@drawable/border"
+    android:layout_margin="8dp">
+
 
     <TextView
         android:id="@+id/numberTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_bold"
+        android:textColor="@color/textColor_one"
         android:text="Número" />
 
     <TextView
         android:id="@+id/frequencyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_semibold"
+        android:textColor="@color/textColor_two"
         android:text="Frequência" />
 </LinearLayout>
