--- a/AppProject/app/src/main/res/layout/activity_main.xml
+++ b/AppProject/app/src/main/res/layout/activity_main.xml
@@ -9,20 +9,23 @@
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="351dp"
+        android:layout_height="50dp"
+        android:layout_margin="18dp"
+        android:layout_marginTop="32dp"
+        android:background="@color/textColor_one"
+        android:fontFamily="@font/poppins_bold"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/spinnerbackgroundcolor"/>
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="16dp"
-        android:background="@color/RecyclerViewColor_test"
+        android:background="@color/backgroundColor"
         app:layout_constraintTop_toBottomOf="@+id/spinner"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
